[package]
name = "desktop-cat"
version = "0.1.0"
edition = "2021"

# Project dependencies 

[dependencies]
eframe = "0.26"
egui_extras = { version = "0.26", features = ["image"] }
image = { version = "0.25", features = ["png", "jpeg"] }
sysinfo = "0.30"
windows-sys = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Graphics_Gdi", 
    "Win32_Foundation",
    "Win32_UI_HiDpi" 
] }
